(0612) feat: 풀캘린더 DB 연동하여 값 가져오는 기본 틀 완성(1142)

--- a/DevQuest-service/src/main/resources/templates/goal/goal.html
+++ b/DevQuest-service/src/main/resources/templates/goal/goal.html
@@ -182,13 +182,11 @@
 
 
     <!-- 캘린더 -->
-<!--    <div class="calendar" th:each="goal : ${goals}">-->
-<!--      <div class="todo-item" th:each="todo : ${todoMap[goal.goalId]}">-->
-<!--        <div id='calendar'>-->
-<!--          <p>캘린더 에용</p>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </div>-->
+    <div class="calendar" th:data-companyId="${company.companyId}" style="display: none;">
+        <div id='calendar'>
+          <p>캘린더 에용</p>
+        </div>
+    </div>
 
 
 
