(0612) refactor: 투두 생성, 수정시 시작 날짜 지정하게 변경 (1235)

--- a/DevQuest-service/src/main/resources/templates/goal/goal.html
+++ b/DevQuest-service/src/main/resources/templates/goal/goal.html
@@ -251,10 +251,11 @@
       <h2>todo 생성</h2>
       <form id="todo-form">
         <input type="text" name="title" placeholder="할 일을 입력해주세요" required><br><br>
+        <input type="date" name="startDate" placeholder="일정을 입력해 주세요" required><br><br>
         <input type="text" name="url" placeholder="(선택)주소를 입력해주세요" ><br><br>
         <input type="hidden" name="goalId">
         <button type="submit">추가</button>
-        <input type="hidden" name="startDate">
+
         <input type="hidden" name="endDate">
         <input type="hidden" name="isDone">
       </form>
