(0612) feat: 투두 완료 시 캘린더에 취소선 표시 기능 추가(1445)

--- a/DevQuest-service/src/main/resources/static/css/goal.css
+++ b/DevQuest-service/src/main/resources/static/css/goal.css
@@ -655,3 +655,8 @@
 .dropdown ul li:hover {
   background-color: #f0f0f0;
 }
+
+.todo-done .fc-event-title {
+  text-decoration: line-through;
+  color: gray !important;
+}
