(0612) feat: 목표에 따른 색상 투두별로 적용(1615)

--- a/DevQuest-service/src/main/resources/templates/goal/goal.html
+++ b/DevQuest-service/src/main/resources/templates/goal/goal.html
@@ -120,8 +120,10 @@
       <div th:each="goal : ${goals}" th:if="${!goal.isDone}" class="goal-card">
         <div>
           <div class="card-header">
-            <p class="goal-name" th:text="${goal.goalListLabel}">목표명</p>
+            <p class="goal-name" th:text="${goal.goalListLabel}" >목표명</p>
             <span class="status" th:text="${goal.isDone}? '완료' : '진행 중'">진행 상태</span>
+            <p th:style="'color:' + (${goal.color} != null ? ${goal.color} : '#000000')">색상테스트용</p>
+
 
             <!-- 수정/삭제 드롭다운  -->
             <div class="dropdown" onclick="event.stopPropagation()">
