(0613) refactor: #5 사용자 프로필 이미지 데이터 DB 리팩토링

--- a/DevQuest-service/src/main/resources/static/css/mypage/mypageUpdate.css
+++ b/DevQuest-service/src/main/resources/static/css/mypage/mypageUpdate.css
@@ -47,11 +47,13 @@ body {
 }
 
 .profile-img {
-    width: 100px;
-    height: 100px;
+    width: 180px;
+    height: 180px;
     border-radius: 50%;
+    display: block;
     margin: 20px auto;
 }
+
 
 .level-title {
     color: #5b5b5b;
