--- a/DevQuest-service/src/main/resources/templates/mypage/mypage.html
+++ b/DevQuest-service/src/main/resources/templates/mypage/mypage.html
@@ -25,7 +25,7 @@
 
 <div class="container">
     <div class="nickname" th:text="${user.nickname} + ' 님의 마이페이지'"></div>
-    <img alt="프로필 이미지" class="profile-img"  th:src="@{'/profile/' + ${image.savePath} + ${image.renameFileName}}">
+    <img alt="프로필 이미지" class="profile-img"  th:src="@{'/profile/'+ ${image.renameFileName}}"/>
     <div class="level-title" th:text="${user.level.levelName}"></div>
     <div class="level" th:text="'Lv.' + ${user.level.levelId}"></div>
 
