(0613) refactor: #18 user > member 로 디렉토리명, 파일명, 변수명 수정

--- a/DevQuest-service/src/main/resources/static/css/mypage/mypage.css
+++ b/DevQuest-service/src/main/resources/static/css/mypage/mypage.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Arial', sans-serif;
-    background-color: #f5f4f8;
+    background-color: #F2F1F4;
     color: #333;
     text-align: center;
 }
