--- a/DevQuest-service/src/main/resources/templates/admin/dashboard.html
+++ b/DevQuest-service/src/main/resources/templates/admin/dashboard.html
@@ -38,7 +38,7 @@
 
   <!--가입/탈퇴 회원 추이 표-->
   <div class="col s12 m6">
-    <h4>User Management</h4>
+    <h4>Member Management</h4>
     <div class="card">
       <div class="card-content">
         <canvas class="card-chart" id="card-legend-line-chart" width="400" height="400"></canvas>
@@ -99,7 +99,7 @@
 <!-- ChartJS -->
 <!-- ✅ Chart.js 최신버전 CDN -->
 <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
-<script type="text/javascript" src="/js/admin/user-line-chart.js"></script>
+<script type="text/javascript" src="/js/admin/member-line-chart.js"></script>
 
 
 <script
@@ -112,7 +112,7 @@
 
 <!-- Initialization script -->
 <script src="js/admin.js"></script>
-<script src="/js/admin/user-line-chart.js"></script>
+<script src="/js/admin/member-line-chart.js"></script>
 <script src="js/init.js"></script>
 </body>
 </html>
