--- a/DevQuest-service/src/main/resources/templates/goal/goal.html
+++ b/DevQuest-service/src/main/resources/templates/goal/goal.html
@@ -108,7 +108,7 @@
   <main class="main-content">
     <div class="menu">
       <a th:href="@{/dashboard}" th:text="대시보드"/>
-      <a th:href="@{/user/mypage}" th:text="마이페이지"/>
+    <a th:href="@{/member/mypage}" th:text="마이페이지"/>
       <div>
       <form id="logoutForm" th:action="@{/logout}" method="post"></form>
       <span onclick="document.getElementById('logoutForm').submit()">로그아웃</span>
