--- a/DevQuest-service/src/main/resources/templates/member/interests.html
+++ b/DevQuest-service/src/main/resources/templates/member/interests.html
@@ -99,7 +99,7 @@
   <span>DevQuest</span>
 </div>
 
-  <form th:action="@{/user/interests}" method="post" id="interestForm">
+  <form th:action="@{/member/interests}" method="post" id="interestForm">
   <input type="hidden" name="role" id="selectedRoleInput">
   <input type="hidden" name="skills" id="selectedSkillsInput">
 
