--- a/DevQuest-service/src/main/resources/templates/fragments/admin-sidenav.html
+++ b/DevQuest-service/src/main/resources/templates/fragments/admin-sidenav.html
@@ -8,7 +8,7 @@
         <div class="background">
 <!--          <img src="/img/DevQuestLogo.png">-->
         </div>
-        <a href="#user"><img class="circle" src="/img/profile.png"></a>
+        <a href="#member"><img class="circle" src="/img/profile.png"></a>
       </div>
     </li>
 
@@ -16,7 +16,7 @@
     <li><a href="/admin/dashboard"><i class="material-icons">desktop_mac</i>대시 보드</a></li>
     <li><a href="/admin/company-stats"><i class="material-icons">equalizer</i>기업 통계</a></li>
     <li><a href="/admin/company-color"><i class="material-icons">brush</i>기업 관리</a></li>
-    <li><a href="/admin/user-management"><i class="material-icons">person</i>회원 관리</a></li>
+    <li><a href="/admin/member-management"><i class="material-icons">person</i>회원 관리</a></li>
     <li><a href="/admin"><i class="material-icons">fiber_new</i>업적 관리</a></li>
   </ul>
 </div>
