--- a/DevQuest-service/src/main/resources/templates/member/signupSuccess.html
+++ b/DevQuest-service/src/main/resources/templates/member/signupSuccess.html
@@ -1,4 +1,4 @@
 <script>
   alert('회원가입이 완료되었습니다!');
-  window.location.href = '/user/signin';
+  window.location.href = '/member/signin';
 </script>
