--- a/DevQuest-service/src/main/resources/templates/mypage/mypage.html
+++ b/DevQuest-service/src/main/resources/templates/mypage/mypage.html
@@ -24,10 +24,10 @@
 </div>
 
 <div class="container">
-    <div class="nickname" th:text="${user.nickname} + ' 님의 마이페이지'"></div>
+    <div class="nickname" th:text="${member.nickname} + ' 님의 마이페이지'"></div>
     <img alt="프로필 이미지" class="profile-img"  th:src="@{'/profile/'+ ${image.renameFileName}}"/>
-    <div class="level-title" th:text="${user.level.levelName}"></div>
-    <div class="level" th:text="'Lv.' + ${user.level.levelId}"></div>
+    <div class="level-title" th:text="${member.level.levelName}"></div>
+    <div class="level" th:text="'Lv.' + ${member.level.levelId}"></div>
 
     <div class="progress-bar">
         <div class="progress" th:style="'width:' + ${progressPercent} + '%'">
@@ -35,8 +35,8 @@
     </div>
 
     <div class="info-box">
-        <p><b>이메일</b> <span th:text="${user.email}"></span></p>
-        <p><b>한마디</b> <span th:text="${user.comment}"></span></p>
+        <p><b>이메일</b> <span th:text="${member.email}"></span></p>
+        <p><b>한마디</b> <span th:text="${member.comment}"></span></p>
     </div>
 
     <div class="achievements">
@@ -60,7 +60,7 @@
             </div>
         </div>
     </div>
-    <div class="edit" onclick="location.href='/user/update'">수정하기</div>
+    <div class="edit" onclick="location.href='/member/update'">수정하기</div>
 </div>
 
 <div class="logout" onclick="deleteAccount()">
