(0615) feat: #22 추천 문제 목록 불러오기 기능 완료(1045)

--- a/DevQuest-service/src/main/resources/templates/goal/goal.html
+++ b/DevQuest-service/src/main/resources/templates/goal/goal.html
@@ -266,12 +266,13 @@
   </div>
 
   <!-- 문제추천 생성 모달 -->
-  <div id="problemModal" class="modal modal-small" style="display: none;">
+  <div id="problemModal" class="modal modal-large" style="display: none;">
     <div class="modal-content">
       <span class="close" id="recommendModalClose">&times;</span>
       <h2>추천 문제 생성</h2>
       <form id="problem-form">
-        <input type="hidden" name="goalId">
+        <input type="hidden" name="goalId" value="">
+        <div id="problem-list"></div>
         <button type="submit">추가</button>
       </form>
     </div>
