--- a/DevQuest-service/src/main/resources/templates/goal/goal.html
+++ b/DevQuest-service/src/main/resources/templates/goal/goal.html
@@ -266,7 +266,7 @@
   </div>
 
   <!-- 문제추천 생성 모달 -->
-  <div id="problemModal" class="modal modal-large" style="display: none;">
+  <div id="problemModal" class="modal  modal-problem" style="display: none;">
     <div class="modal-content">
       <span class="close" id="recommendModalClose">&times;</span>
       <h2>추천 문제 생성</h2>
