(0616) feat: #3 JWT 로그아웃 기능 필터로 구현

--- a/DevQuest-service/src/main/resources/templates/goal/goal.html
+++ b/DevQuest-service/src/main/resources/templates/goal/goal.html
@@ -108,7 +108,7 @@
       <a th:href="@{/dashboard}" th:text="대시보드"/>
     <a th:href="@{/member/mypage}" th:text="마이페이지"/>
       <div>
-      <form id="logoutForm" th:action="@{/logout}" method="post"></form>
+      <form id="logoutForm" th:action="@{/auth/logout}" method="post"></form>
       <span onclick="document.getElementById('logoutForm').submit()">로그아웃</span>
       </div>
     </div>
